# open-skills

./: .gitignore  README.md  TODO.md  pyproject.toml
.open-skills/registry/: index.json
docs/: adapters.md  architecture.md  spec.md
open_skills/: __init__.py  activation.py  adapters.py  cli.py  codex_adapter.py  loader.py  models.py  registry.py  signing.py  validator.py
open_skills/activation/: README.md  __init__.py  engine.py
open_skills/adapters/: README.md  __init__.py  base.py  codex.py
open_skills/core/: README.md  __init__.py  loader.py  models.py
open_skills/registry/: README.md  __init__.py  store.py
open_skills/trust/: README.md  __init__.py  signing.py
skills/hello-skill/: SKILL.md
skills/hello-skill/references/: materialization.md  validation.md
